--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav navbar-right">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
                         <a class="page-scroll" href="#page-top"></a>
@@ -77,21 +77,21 @@
     </nav>
 
     <!-- Intro Section -->
-    <section id="intro" class="intro-section">
+    <!--<section id="intro" class="intro-section">-->
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div id="owl-demo" class="owl-carousel owl-theme">
  
-  <div class="item"><img src="img/rwd.jpg" alt="The Last of us"></div>
-  <div class="item"><img src="img/rwd.jpg" alt="GTA V"></div>
-  <div class="item"><img src="img/rwd.jpg" alt="Mirror Edge"></div>
+						<div class="item"><img src="http://cdn.hdrspotting.com/c0e0242936c9f796ef83fe8d12a7476ab67d6da1a13d43d7fee9a25138e615764b7f13a66bc269ea_140425_lightbox.jpeg" alt="The Last of us"></div>
+						<div class="item"><img src="http://cdn.hdrspotting.com/c0e0242936c9f796ef83fe8d12a7476ab67d6da1a13d43d7fee9a25138e615764b7f13a66bc269ea_140425_lightbox.jpeg" alt="GTA V"></div>
+						<div class="item"><img src="http://cdn.hdrspotting.com/c0e0242936c9f796ef83fe8d12a7476ab67d6da1a13d43d7fee9a25138e615764b7f13a66bc269ea_140425_lightbox.jpeg" alt="Mirror Edge"></div>
  
-</div>
+					</div>
                 </div>
             </div>
         </div>
-    </section>
+    <!--</section>-->
 
     <!-- About Section -->
     <section id="about" class="about-section">
