--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
-    <!-- Scrolling Nav JavaScript -->
-    <script src="js/jquery.easing.min.js"></script>
+    <!-- Scrolling Nav JavaScript 
+    <script src="js/jquery.easing.min.js"></script> -->
     <script src="js/scrolling-nav.js"></script>
     <script src="js/carousel.js"></script>
 
@@ -143,7 +143,7 @@ $(document).ready(function() {
   $("#owl-demo").owlCarousel({
 		
       navigation : false, 
-	  autoPlay: 10000,
+      autoPlay: 10000,
       slideSpeed : 500,
       paginationSpeed : 400,
       singleItem:true
